# dongolder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  gold-signal-bot.service  import_test.txt  pyproject.toml  railway.toml
.gsd/: PROJECT.md  ROADMAP.md  STATE.md
.gsd/phases/01-data-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md
.gsd/phases/02-technical-analysis-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.gsd/phases/03-telegram-signal-bot/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.gsd/phases/04-fusion-engine/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.gsd/phases/05-advanced-analysis/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md
.gsd/phases/06-deployment-tracking/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.gsd/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/gold_signal_bot/: __init__.py  __main__.py  config.py
src/gold_signal_bot/analysis/: __init__.py  analyzer.py  feature_store.py  fusion.py  indicators.py  ml_patterns.py  models.py  sentiment.py  signals.py  support_resistance.py
src/gold_signal_bot/data/: __init__.py  aggregator.py  (+7 more)
tests/: __init__.py  test_alerts.py  test_formatter.py  test_fusion.py  test_indicators.py  test_ml_patterns.py  test_sentiment.py  test_support_resistance.py
(+5 files in other folders)
