[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gold-signal-bot"
version = "0.1.0"
description = "Gold trading signal bot with technical analysis and Telegram integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gold_signal_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
